--- a/_posts/2020-06-09-Em-Sys-HIL.md
+++ b/_posts/2020-06-09-Em-Sys-HIL.md
@@ -4,7 +4,7 @@ layout: post
 date: 2020-06-09
 description: A complete post.
 image: 2.png
-categories: ["HIL","Microcontroller","ESP-32","FreeRTOS","UDP-IP","Power Electronics"]
+categories: ["HIL","Microcontroller","ESP-32","FreeRTOS","UDP-IP","Power-Electronics"]
 ---
 
 My thesis in the university were about design a physical module to make proofs with a generator in real time, but for explain this is some things to know after
