--- a/_posts/2020-06-09-Em-Sys-HIL.md
+++ b/_posts/2020-06-09-Em-Sys-HIL.md
@@ -2,7 +2,7 @@
 title: Embedded System for Hardware In the Loop (HIL) for generator 
 layout: post
 date: 2020-06-09
-description: A complete post.
+description: Describes my thesis in the univesity.
 image: 2.png
 categories: ["HIL","Microcontroller","ESP-32","FreeRTOS","UDP-IP","Power-Electronics"]
 ---
