--- a/_posts/2020-06-30-NMPC.md
+++ b/_posts/2020-06-30-NMPC.md
@@ -317,12 +317,12 @@ This is all the simulation
  
 ### Conclusions and observations
  
-- The cost function
- - In the original paper in the cost function consider the change in the input $$\Delta u$$. If cant affect the control input. For example in the beginning of the action control is a pick behold 500, this can change if consider the $$\Delta u$$ in the cost function.
-- The input and the system
- - The control input increase with the time, but if the input increase the state $$h$$ go to zero and uncontrollable. This is because the state $$h$$ are denominator in the part of the inputs of the state $$C_b$$.
-- Comparison with MATLAB result
- - In parte this simulation is the same or trying to be the same as the example in MATLAB called [**<u> design neural network predictive controller in simulink </u>**](https://www.mathworks.com/help/deeplearning/ug/design-neural-network-predictive-controller-in-simulink.html#:~:text=The%20controller%20consists%20of%20the,described%20in%20the%20following%20section.). The result aren't the same. This can be because the cost function no are the same or in the MATLAB example use more than one future prediction and input.
+- The cost function:
+    - In the original paper in the cost function consider the change in the input $$\Delta u$$. If cant affect the control input. For example in the beginning of the action control is a pick behold 500 this can change if consider the $$\Delta u$$ in the cost function.
+- The input and the system:
+    - The control input increase with the time, but if the input increase the state $$h$$ go to zero and uncontrollable. This is because the state $$h$$ are denominator in the part of the inputs of the state $$C_b$$.
+- Comparison with MATLAB result:
+    - In parte this simulation is the same or trying to be the same as the example in MATLAB called [**<u> design neural network predictive controller in simulink </u>**](https://www.mathworks.com/help/deeplearning/ug/design-neural-network-predictive-controller-in-simulink.html#:~:text=The%20controller%20consists%20of%20the,described%20in%20the%20following%20section.). The result aren't the same. This can be because the cost function no are the same or in the MATLAB example use more than one future prediction and input.
  
 ### References
 All the references are linked in the text with underline and bold style, **<u>like this</u>**
