--- a/_posts/2020-06-30-NMPC.md
+++ b/_posts/2020-06-30-NMPC.md
@@ -7,7 +7,7 @@ image: 3.png
 categories: ["Control","Neural-Networks","Predictive-Control","Python","Neurolab"]
 ---
  
-In this post, I show how to do simple a Neural Generalized Predictive Control (**NGPC**) using Neurolab in python, To do this post I'm basing in the paper [**<u>Neural Generalized Predictive Control A Newton-Raphson Implementation of Donald Soloway and Pamela J. Haley</u>**](https://www.researchgate.net/publication/3668550_Neural_generalized_predictive_control)
+In this post, I show how to do a simple Neural Generalized Predictive Control (**NGPC**) using Neurolab in python, To do this post I'm basing in the paper [**<u>Neural Generalized Predictive Control A Newton-Raphson Implementation of Donald Soloway and Pamela J. Haley</u>**](https://www.researchgate.net/publication/3668550_Neural_generalized_predictive_control)
 . If you want to know more about of state of the art of this techniques you can read the paper. In this post only show a bit of theory and the implementation of the simulation. All the training and simulation is made with Python using neurolab, numpy, matplotlib, random and scipy packages.
  
 ### Neural Generalized Predictive Control
